--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>单页面应用</title>
+  <title>数学课堂</title>
   <link rel="stylesheet" href="/src/assets/main.css">
+  <link rel="stylesheet" href="/src/assets/sci-fi-theme.css">
   <script src="GeoGebra/deployggb.js"></script>
 </head>
 <body>
